--- a/Homework/Day001_HW.ipynb
+++ b/Homework/Day001_HW.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 將「Hello World」字串覆寫到 Homework.txt 檔案\n",
     "\n",
+    "f = ''\n",
     "\n",
     "with open(\"./Data/Homework.txt\", \"w\") as fh:\n",
     "    f = fh.write(\"Hello World\") \n",
@@ -118,7 +119,7 @@
     "\n",
     "try:\n",
     "    with open(\"./Data/Homework.txt\", \"r\") as fh:\n",
-    "        f = fh.read\n",
+    "        f = fh.read()\n",
     "        \n",
     "except EnvironmentError: # parent of IOError, OSError *and* WindowsError where available\n",
     "    pass    \n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -143,34 +144,11 @@
    "source": [
     "# 檢查 Homework.txt 檔案字數是否符合 Hello World 字數\n",
     "\n",
-    "f = (\"Hello World\")\n",
-    "\n",
     "if len('Hello World') == len(f):\n",
     "    print('[O] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')\n",
     "else:\n",
     "    print('[X] 檢查 Homework.txt 檔案字數是否符合 Hello World 字數')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
