--- a/Homework/Day018_HW.ipynb
+++ b/Homework/Day018_HW.ipynb
@@ -188,21 +188,18 @@
     "url = 'http://aicoin.cn/'\n",
     "\n",
     "headers = {\n",
-    "    'authority': 'www.aicoin.cn',\n",
-    "    'method':'GET',\n",
-    "    'scheme': 'https',\n",
-    "    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9',\n",
-    "    'Accept-Encoding': 'gzip, deflate, br',\n",
-    "    'Accept-Language': 'en-GB,en-US;q=0.9,en;q=0.8',\n",
-    "    'Cache-Control': 'max-age=0',\n",
-    "    'Connection': 'keep-alive',\n",
-    "    'Cookie': 'HWWAFSESID=6f0f476a29abcdc25b; HWWAFSESTIME=1585112817825; _pk_testcookie..undefined=1; _pk_testcookie.2.57ea=1; _pk_ref.2.57ea=%5B%22%22%2C%22%22%2C1585112823%2C%22http%3A%2F%2Flocalhost%3A8888%2Fnotebooks%2FJupyterProjects%2F2nd-PyCrawlerMarathon%2FHomework%2FDay018_HW.ipynb%22%5D; _pk_ses.2.57ea=1; _ga=GA1.2.667577931.1585112825; _gid=GA1.2.2091309526.1585112825; Hm_lvt_3c606e4c5bc6e9ff490f59ae4106beb4=1585113626,1585113896,1585114012,1585114106; Hm_lpvt_3c606e4c5bc6e9ff490f59ae4106beb4=1585114106; aicoin_session=eyJpdiI6Ik9xa0N2Y0txeG9kOVI2QUp1eGNoM2c9PSIsInZhbHVlIjoicytYWDB0SHBmRGhFWkF0UzNzcUdmWVp3azhNbVc2XC9ueXJtRnpCQkNnT205Y0lGMktlR3NydzJVVFlHNGFaVFJscENNVTV4SjRiazVZRTBERTd3bmdRPT0iLCJtYWMiOiIwZmVkNDFiNzg2NmM0NzBjNmEzYjk5ZWMxNjczMTBmYzRiYTJjMDI5YzVjMjFjY2FhYzNmMDM3OTkxYzFhYWY1In0%3D; _pk_id.2.57ea=6c1769f1f44cbfbd.1585112823.1.1585114414.1585112823.',\n",
-    "    'DNT': '1',\n",
-    "    'Host':'www.aicoin.cn',\n",
-    "    'Sec-Fetch-Dest': 'document',\n",
-    "    'Sec-Fetch-Site': 'none',\n",
-    "    'Sec-Fetch-Mode': 'navigate',\n",
-    "    'Sec-Fetch-User': '?1',\n",
+    "    #'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9',\n",
+    "    #'Accept-Encoding': 'gzip, deflate, br',\n",
+    "    #'Accept-Language': 'en-GB,en-US;q=0.9,en;q=0.8',\n",
+    "    #'Cache-Control': 'max-age=0',\n",
+    "    #'Connection': 'keep-alive',\n",
+    "    #'Cookie': 'HWWAFSESID=6f0f476a29abcdc25b; HWWAFSESTIME=1585112817825; _pk_testcookie..undefined=1; _pk_testcookie.2.57ea=1; _pk_ref.2.57ea=%5B%22%22%2C%22%22%2C1585112823%2C%22http%3A%2F%2Flocalhost%3A8888%2Fnotebooks%2FJupyterProjects%2F2nd-PyCrawlerMarathon%2FHomework%2FDay018_HW.ipynb%22%5D; _pk_ses.2.57ea=1; _ga=GA1.2.667577931.1585112825; _gid=GA1.2.2091309526.1585112825; Hm_lvt_3c606e4c5bc6e9ff490f59ae4106beb4=1585113626,1585113896,1585114012,1585114106; Hm_lpvt_3c606e4c5bc6e9ff490f59ae4106beb4=1585114106; aicoin_session=eyJpdiI6Ik9xa0N2Y0txeG9kOVI2QUp1eGNoM2c9PSIsInZhbHVlIjoicytYWDB0SHBmRGhFWkF0UzNzcUdmWVp3azhNbVc2XC9ueXJtRnpCQkNnT205Y0lGMktlR3NydzJVVFlHNGFaVFJscENNVTV4SjRiazVZRTBERTd3bmdRPT0iLCJtYWMiOiIwZmVkNDFiNzg2NmM0NzBjNmEzYjk5ZWMxNjczMTBmYzRiYTJjMDI5YzVjMjFjY2FhYzNmMDM3OTkxYzFhYWY1In0%3D; _pk_id.2.57ea=6c1769f1f44cbfbd.1585112823.1.1585114414.1585112823.',\n",
+    "    #'DNT': '1',\n",
+    "    #'Host':'www.aicoin.cn',\n",
+    "    #'Sec-Fetch-Dest': 'document',\n",
+    "    #'Sec-Fetch-Site': 'none',\n",
+    "    #'Sec-Fetch-Mode': 'navigate',\n",
+    "    #'Sec-Fetch-User': '?1',\n",
     "    'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36'\n",
     "}\n",
     "\n",
