--- a/Homework/Day012_HW.ipynb
+++ b/Homework/Day012_HW.ipynb
@@ -7,7 +7,7 @@
     "# Ettoday 網路爬蟲實作練習\n",
     "\n",
     "\n",
-    "* 能夠利用 Request + BeatifulSour 撰寫爬蟲，並存放到合適的資料結構\n"
+    "* 能夠利用 Request + BeatifulSoup 撰寫爬蟲，並存放到合適的資料結構\n"
    ]
   },
   {
