--- a/Homework/Day021_HW.ipynb
+++ b/Homework/Day021_HW.ipynb
@@ -469,7 +469,7 @@
     "\n",
     "for d in soup.find(class_=\"part_list_2\").find_all('h3'):\n",
     "    Date = datetime.strptime(d.find(class_=\"date\").text,'%Y/%m/%d %H:%M')\n",
-    "    if hours_from_now.time() <= Date.time() and d.find(text=re.compile(d1)) != None:\n",
+    "    if hours_from_now.time() < Date.time() and d.find(text=re.compile(d1)) != None:\n",
     "        print(d.find(class_=\"date\").text, d.find_all('a')[-1].text)"
    ]
   },
